@@ -1,3 +1,12 @@
+2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins/AddinRegistry.cs,
+	  Mono.Addins.Database/AddinScanResult.cs,
+	  Mono.Addins.Database/AddinDatabase.cs,
+	  Mono.Addins.Database/AddinScanner.cs: When updating the registry,
+	  only scan folders which belong to the current domain.
+	* Mono.Addins/ExtensionContext.cs: Fix warning.
+
 2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins/ExtensionContext.cs: Added missing null check.
